@@ -1,3 +1,7 @@
+10/15/2003 Mike Mueller <mmueller@cs.uri.edu>
+
+    * NEWS: Adding :set wrapscan (ws) option.
+
 10/10/2003 Bob Rossi <bob@brasko.net>
 
     * Adding doc directory.
